Added validation of harmonized data, extra documentation, started breaking dataset harmonization out into different functions

--- a/GENESIS_harmonization.yml
+++ b/GENESIS_harmonization.yml
@@ -67,3 +67,37 @@ default:
     stage1_2: "Braak Stage I-II"
     stage3_4: "Braak Stage III-IV"
     stage5_6: "Braak Stage V-VI"
+
+  dataContributionGroup:
+    allen_institute: "Allen Institute"
+    banner: "Banner Sun Health Research Institute"
+    columbia: "Columbia"
+    emory: "Emory"
+    nimh: "NIMH Human Brain Collection Core"
+    mayo: "Mayo"
+    mssm: "MSSM"
+    rush: "Rush"
+    stanley: "Stanley Medical Research Institute"
+
+  cohort:
+    banner: "Banner"
+    biggs: "Biggs Institute Brain Bank"
+    clincor: "CLINCOR"
+    columbia: "Columbia ADRC"
+    efiga: "EFIGA"
+    emory: "Emory"
+    fbs: "FBS"
+    hbcc: "HBCC"
+    latc: "LATC"
+    map: "MAP"
+    mars: "MARS"
+    mayo: "Mayo Clinic"
+    msbb: "Mt Sinai Brain Bank"
+    nimh: "NIMH Human Brain Collection Core"
+    ros: "ROS"
+    sea_ad: "SEA-AD"
+    smri: "SMRI"
+    ufl: "UFL"
+    upenn: "UPenn"
+    whicap: "WHICAP"
+    none: ""
