Started adding BD2 and AMP-PD harmonization functions. AMP-PD is not complete.

--- a/GENESIS_harmonization.yml
+++ b/GENESIS_harmonization.yml
@@ -73,11 +73,15 @@ default:
     banner: "Banner Sun Health Research Institute"
     columbia: "Columbia"
     emory: "Emory"
-    nimh: "NIMH Human Brain Collection Core"
+    harvard: "Harvard Brain Tissue Resource Center"
     mayo: "Mayo"
     mssm: "MSSM"
+    nimh: "NIMH Human Brain Collection Core"
     rush: "Rush"
     stanley: "Stanley Medical Research Institute"
+    udall: "University of Miami Udall Center of Excellence for Parkinson's Disease Research"
+    umiami: "University of Miami Brain Endowment Bank"
+    upitt: "University of Pittsburgh"
 
   cohort:
     banner: "Banner"
@@ -93,16 +97,18 @@ default:
     mars: "MARS"
     mayo: "Mayo Clinic"
     msbb: "Mt Sinai Brain Bank"
-    nimh: "NIMH Human Brain Collection Core"
     ros: "ROS"
     sea_ad: "SEA-AD"
     smri: "SMRI"
     ufl: "UFL"
     upenn: "UPenn"
+    upitt: "UPitt"
     whicap: "WHICAP"
     none: ""
 
   study:
+    amp_pd: "AMP-PD"
+    bd2: "BD2"
     diverse_cohorts: "AMP-AD_DiverseCohorts"
     mayo: "MayoRNAseq"
     mc_brad: "MC-BrAD"
