Added ASAP harmonization functions

--- a/GENESIS_harmonization.yml
+++ b/GENESIS_harmonization.yml
@@ -70,6 +70,7 @@ default:
 
   dataContributionGroup:
     allen_institute: "Allen Institute"
+    asap: "ASAP CRN"
     banner: "Banner Sun Health Research Institute"
     columbia: "Columbia"
     emory: "Emory"
@@ -86,6 +87,7 @@ default:
   cohort:
     banner: "Banner"
     biggs: "Biggs Institute Brain Bank"
+    cambridge: "Cambridge Brain Bank"
     clincor: "CLINCOR"
     columbia: "Columbia ADRC"
     efiga: "EFIGA"
@@ -97,6 +99,8 @@ default:
     mars: "MARS"
     mayo: "Mayo Clinic"
     msbb: "Mt Sinai Brain Bank"
+    nki: "NKI/NYUGSOM"
+    qsbb: "Queen Square Brain Bank"
     ros: "ROS"
     sea_ad: "SEA-AD"
     smri: "SMRI"
@@ -108,6 +112,7 @@ default:
 
   study:
     amp_pd: "AMP-PD"
+    asap: "ASAP"
     bd2: "BD2"
     diverse_cohorts: "AMP-AD_DiverseCohorts"
     mayo: "MayoRNAseq"
