Updated AMP-PD harmonization, added generic harmonize function to take care of filling in missing columns and values

--- a/GENESIS_harmonization.yml
+++ b/GENESIS_harmonization.yml
@@ -80,7 +80,7 @@ default:
     nimh: "NIMH Human Brain Collection Core"
     rush: "Rush"
     stanley: "Stanley Medical Research Institute"
-    udall: "University of Miami Udall Center of Excellence for Parkinson's Disease Research"
+    udall: "Udall Center of Excellence for Parkinson's Disease Research"
     umiami: "University of Miami Brain Endowment Bank"
     upitt: "University of Pittsburgh"
 
@@ -93,6 +93,7 @@ default:
     efiga: "EFIGA"
     emory: "Emory"
     fbs: "FBS"
+    harvard: "HBTRC"
     hbcc: "HBCC"
     latc: "LATC"
     map: "MAP"
@@ -105,6 +106,8 @@ default:
     sea_ad: "SEA-AD"
     smri: "SMRI"
     ufl: "UFL"
+    udall: "Udall"
+    umiami: "UMBEB"
     upenn: "UPenn"
     upitt: "UPitt"
     whicap: "WHICAP"
