Finished harmonizing McCarroll datasets

--- a/GENESIS_harmonization.yml
+++ b/GENESIS_harmonization.yml
@@ -87,6 +87,7 @@ default:
     allen_institute: "Allen Institute"
     asap: "ASAP Collaborative Research Network"
     banner: "Banner Sun Health Research Institute"
+    broad: "Broad Institute"
     columbia: "Columbia University"
     emory: "Emory University"
     harvard: "Harvard Brain Tissue Resource Center"
